--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>-->
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
 
-    <script src="/__/firebase/7.2.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+    <!-- <script src="/__/firebase/7.2.1/firebase-app.js"></script> -->
+    
         
     <!-- <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-database.js"></script>  -->
 
